Added errai-security to project

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
       <version>${errai.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.jboss.errai</groupId>
+      <artifactId>errai-security</artifactId>
+      <version>${errai.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.mvel</groupId>
       <artifactId>mvel2</artifactId>
       <version>${mvel.version}</version>
