--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
       <artifactId>mvel2</artifactId>
       <version>${mvel.version}</version>
     </dependency>
+        <dependency>
+    	<groupId>org.jboss.errai</groupId>
+    	<artifactId>errai-javaee-all</artifactId>
+    	<version>${errai.version}</version>
+    </dependency>
 
     <!-- CDI Integration Modules -->
     <dependency>
@@ -205,6 +210,7 @@
       <artifactId>jboss-logging</artifactId>
       <version>3.0.0.Beta4</version>
     </dependency>
+
   </dependencies>
 
   <profiles>
