--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <jetty.version>6.1.25</jetty.version>
     <slf4j.version>1.6.1</slf4j.version>
     <uel.impl.version>2.1.2-b04</uel.impl.version>
+    <picketlink.version>2.5.0.Beta4</picketlink.version>
   </properties>
 
   <dependencies>
@@ -130,6 +131,20 @@
     	<artifactId>errai-javaee-all</artifactId>
     	<version>${errai.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>org.picketlink</groupId>
+      <artifactId>picketlink-api</artifactId>
+      <version>${picketlink.version}</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.picketlink</groupId>
+      <artifactId>picketlink-impl</artifactId>
+      <version>${picketlink.version}</version>
+    </dependency>
+        
 
     <!-- CDI Integration Modules -->
     <dependency>
@@ -208,7 +223,7 @@
     <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging</artifactId>
-      <version>3.0.0.Beta4</version>
+      <version>3.1.3.GA</version>
     </dependency>
 
   </dependencies>
